// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleMain should render a news article correctly 1`] = `
<RequestContextProvider
  bbcOrigin="https://www.test.bbc.co.uk"
  currentPath={null}
  id="c0000000000o"
  isAmp={false}
  pageType="article"
  previousPath={null}
  service="news"
>
  <ArticleMain
    articleData={
      Object {
        "content": Object {
          "model": Object {
            "blocks": Array [
              Object {
                "id": 1,
                "model": Object {
                  "blocks": Array [
                    Object {
                      "id": 1,
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "id": 1,
                            "model": Object {
                              "blocks": Array [
                                Object {
                                  "id": 1,
                                  "model": Object {
                                    "attributes": Array [],
                                    "text": "Article Headline",
                                  },
                                  "type": "fragment",
                                },
                              ],
                              "text": "Article Headline",
                            },
                            "type": "paragraph",
                          },
                        ],
                      },
                      "type": "text",
                    },
                  ],
                },
                "type": "headline",
              },
              Object {
                "id": 2,
                "model": Object {
                  "blocks": Array [
                    Object {
                      "id": 2,
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "id": 2,
                            "model": Object {
                              "attributes": Array [],
                              "text": "A paragraph.",
                            },
                            "type": "fragment",
                          },
                        ],
                        "text": "A paragraph.",
                      },
                      "type": "paragraph",
                    },
                  ],
                },
                "type": "text",
              },
            ],
          },
        },
        "metadata": Object {
          "created": 1514808060000,
          "createdBy": "News",
          "firstPublished": 1514808060000,
          "id": "urn:bbc:ares::article:c0000000001o",
          "lastPublished": 1514811600000,
          "lastUpdated": 1514815200000,
          "locators": Object {
            "optimoUrn": "urn:bbc:optimo:asset:c0000000001o",
          },
          "passport": Object {
            "category": "news",
            "genre": null,
            "home": "http://www.bbc.co.uk/ontologies/passport/home/News",
            "language": "en-gb",
          },
          "tags": Object {
            "about": Array [
              Object {
                "curationType": Array [
                  "vivo-stream",
                ],
                "thingId": "2351f2b2-ce36-4f44-996d-c3c4f7f90eaa",
                "thingLabel": "Royal Wedding 2018",
                "thingSameAs": Array [
                  "http://dbpedia.org/resource/Queen_Victoria",
                  "http://rdf.freebase.com/ns/m.0cw10",
                ],
                "thingType": Array [
                  "Thing",
                  "Event",
                ],
                "thingUri": "http://www.bbc.co.uk/things/2351f2b2-ce36-4f44-996d-c3c4f7f90eaa#id",
                "topicId": "cpwpy79d6dxt",
                "topicName": "Royal Wedding 2018",
              },
              Object {
                "curationType": Array [
                  "vivo-stream",
                ],
                "thingId": "803eaeb9-c0c3-4f1b-9a66-90efac3df2dc",
                "thingLabel": "Duchess of Sussex",
                "thingSameAs": Array [],
                "thingType": Array [
                  "Person",
                ],
                "thingUri": "http://www.bbc.co.uk/things/803eaeb9-c0c3-4f1b-9a66-90efac3df2dc#id",
                "topicId": "cg3mq45zq4xt",
                "topicName": "Duchess of Sussex",
              },
            ],
            "mentions": Array [
              Object {
                "thingId": "1efbf3e5-b330-49a1-b531-b507ab027c96",
                "thingLabel": "Queen Victoria",
                "thingType": Array [
                  "Person",
                  "Thing",
                ],
                "thingUri": "http://www.bbc.co.uk/things/1efbf3e5-b330-49a1-b531-b507ab027c96#id",
              },
            ],
          },
          "type": "article",
        },
        "promo": Object {
          "headlines": Object {
            "promoHeadline": "Article Headline for Promo",
            "seoHeadline": "Article Headline for SEO",
          },
          "id": "urn:bbc:ares::article:c0000000001o",
          "locators": Object {
            "optimoUrn": "urn:bbc:optimo:asset:c0000000001o",
          },
          "summary": "Article summary.",
          "timestamp": 1514811600000,
        },
      }
    }
  />
</RequestContextProvider>
`;

exports[`ArticleMain should render a persian article correctly 1`] = `
<RequestContextProvider
  bbcOrigin="https://www.test.bbc.co.uk"
  currentPath={null}
  id="c0000000000o"
  isAmp={false}
  pageType="article"
  previousPath={null}
  service="persian"
>
  <ArticleMain
    articleData={
      Object {
        "content": Object {
          "model": Object {
            "blocks": Array [
              Object {
                "id": 1,
                "model": Object {
                  "blocks": Array [
                    Object {
                      "id": 1,
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "id": 1,
                            "model": Object {
                              "blocks": Array [
                                Object {
                                  "id": 1,
                                  "model": Object {
                                    "attributes": Array [],
                                    "text": "سرصفحه مقاله",
                                  },
                                  "type": "fragment",
                                },
                              ],
                              "text": "سرصفحه مقاله",
                            },
                            "type": "paragraph",
                          },
                        ],
                      },
                      "type": "text",
                    },
                  ],
                },
                "type": "headline",
              },
              Object {
                "id": 2,
                "model": Object {
                  "blocks": Array [
                    Object {
                      "id": 2,
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "id": 2,
                            "model": Object {
                              "attributes": Array [],
                              "text": "یک پاراگراف.",
                            },
                            "type": "fragment",
                          },
                        ],
                        "text": "یک پاراگراف.",
                      },
                      "type": "paragraph",
                    },
                  ],
                },
                "type": "text",
              },
            ],
          },
        },
        "metadata": Object {
          "created": 1514808060000,
          "createdBy": "Persian",
          "firstPublished": 1514808060000,
          "id": "urn:bbc:ares::article:c4vlle3q337o",
          "lastPublished": 1514811600000,
          "lastUpdated": 1514815200000,
          "locators": Object {
            "optimoUrn": "urn:bbc:optimo:asset:c4vlle3q337o",
          },
          "passport": Object {
            "category": "news",
            "genre": null,
            "home": "http://www.bbc.co.uk/ontologies/passport/home/Persian",
            "language": "fa",
          },
          "tags": Object {
            "about": null,
            "mentions": null,
          },
          "type": "article",
        },
        "promo": Object {
          "headlines": Object {
            "promoHeadline": "سرصفحه مقاله برای ارتقاء",
            "seoHeadline": "سرصفحه مقاله",
          },
          "id": "urn:bbc:ares::article:c4vlle3q337o",
          "locators": Object {
            "optimoUrn": "urn:bbc:optimo:asset:c4vlle3q337o",
          },
          "summary": "خلاصه مقاله",
          "timestamp": 1514811600000,
        },
      }
    }
  />
</RequestContextProvider>
`;
